--- a/src/Checkbox/Checkbox.less
+++ b/src/Checkbox/Checkbox.less
@@ -21,13 +21,13 @@
   cursor: pointer;
   outline: none;
   &:hover {
-    .@{prefixCls}__icon {
+    .@{prefixCls}__inner {
       border-color: @hoverBorder;
     }
   }
 }
 
-.@{prefixCls}__icon {
+.@{prefixCls}__inner {
   display: inline-block;
   width: 14px;
   height: 14px;
@@ -54,24 +54,8 @@
   }
 }
 
-.@{prefixCls}__input {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 1;
-  cursor: pointer;
-  opacity: 0;
-  &[disabled] {
-    cursor: not-allowed;
-  }
-}
-
 .@{prefixCls}--indeterminate {
-  .@{prefixCls}__icon {
+  .@{prefixCls}__inner {
     background-color: @blue;
     border-color: @blue;
     &::after {
@@ -85,14 +69,14 @@
     }
   }
   &:hover {
-    .@{prefixCls}__icon {
+    .@{prefixCls}__inner {
       border-color: @blue;
     }
   }
 }
 
 .@{prefixCls}--checked {
-  .@{prefixCls}__icon {
+  .@{prefixCls}__inner {
     border-color: @blue;
     background-color: @blue;
     &::after {
@@ -111,7 +95,7 @@
     }
   }
   &:hover {
-    .@{prefixCls}__icon {
+    .@{prefixCls}__inner {
       border-color: @blue;
     }
   }
@@ -119,7 +103,7 @@
 
 .@{prefixCls}--disabled {
   cursor: not-allowed;
-  .@{prefixCls}__icon {
+  .@{prefixCls}__inner {
     background-color: #f3f3f3;
     border-color: @border;
     &::after {
@@ -128,11 +112,8 @@
     }
   }
   &:hover {
-    .@{prefixCls}__icon {
+    .@{prefixCls}__inner {
       border-color: @border;
     }
-  }
-  .@{prefixCls}__input {
-    cursor: not-allowed;
   }
 }
