--- a/src/Table/Table.less
+++ b/src/Table/Table.less
@@ -3,11 +3,107 @@
 // text
 @prefixCls: zk-table;
 // color
-@black: #1F2D3D;
+@black: #1f2d3d;
 @white: #ffffff;
 @border: #e9eaec;
 @hoverRow: #ebf7ff;
 @backgroundRow: #f8f8f9;
+
+@popper-background-color: #000;
+
+.vue-tooltip {
+  background-color: @popper-background-color;
+  box-sizing: border-box;
+  color: #fff;
+  // min-width: 120px;
+  max-width: 320px;
+  padding: 6px 10px;
+  border-radius: 3px;
+  z-index: 100;
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.4);
+  white-space: normal;
+  text-align: center;
+
+  &.vue-tooltip-hidden {
+    transform: translateX(-100000px) !important;
+  }
+
+  .vue-tooltip-content {
+    text-align: center;
+  }
+  .tooltip-arrow {
+    content: "";
+    width: 0;
+    height: 0;
+    border-style: solid;
+    position: absolute;
+    margin: 5px;
+  }
+
+  &[x-out-of-boundaries] {
+    display: none;
+  }
+
+  &[x-placement^="bottom"] {
+    margin-top: 5px;
+
+    .tooltip-arrow {
+      border-width: 0 5px 5px 5px;
+      border-bottom-color: @popper-background-color;
+      border-top-color: transparent !important;
+      border-left-color: transparent !important;
+      border-right-color: transparent !important;
+      top: -5px;
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+  }
+
+  &[x-placement^="top"] {
+    margin-bottom: 5px;
+
+    .tooltip-arrow {
+      border-width: 5px 5px 0 5px;
+      border-top-color: @popper-background-color;
+      border-bottom-color: transparent !important;
+      border-left-color: transparent !important;
+      border-right-color: transparent !important;
+      bottom: -5px;
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+  }
+
+  &[x-placement^="right"] {
+    margin-left: 5px;
+
+    .tooltip-arrow {
+      border-width: 5px 5px 5px 0;
+      border-right-color: @popper-background-color;
+      border-top-color: transparent !important;
+      border-left-color: transparent !important;
+      border-bottom-color: transparent !important;
+      left: -5px;
+      margin-left: 0;
+      margin-right: 0;
+    }
+  }
+
+  &[x-placement^="left"] {
+    margin-right: 5px;
+
+    .tooltip-arrow {
+      border-width: 5px 0 5px 5px;
+      border-left-color: @popper-background-color;
+      border-top-color: transparent !important;
+      border-right-color: transparent !important;
+      border-bottom-color: transparent !important;
+      right: -5px;
+      margin-left: 0;
+      margin-right: 0;
+    }
+  }
+}
 
 .@{prefixCls} {
   position: relative;
@@ -116,12 +212,13 @@
 .@{prefixCls}--tree-icon {
   margin-right: 6px;
   cursor: pointer;
+  vertical-align: middle;
 }
 
 .@{prefixCls}--expand-inner {
   text-align: center;
   cursor: pointer;
-  transition: transform .2s ease-in-out;
+  transition: transform 0.2s ease-in-out;
 }
 
 .@{prefixCls}--expanded-inner {
@@ -130,4 +227,12 @@
 
 .@{prefixCls}--expand-content {
   padding: 20px;
+}
+.truncate {
+  max-width: 100%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  display: inline-block;
+  vertical-align: middle;
 }
