--- a/src/Table/Table.less
+++ b/src/Table/Table.less
@@ -14,7 +14,7 @@
 .vue-tooltip {
   background-color: @popper-background-color;
   box-sizing: border-box;
-  white-space: nowrap;
+  white-space: normal;
   color: #fff;
   max-width: 320px;
   padding: 6px 10px;
